tests/neg-custom-args/captures/cc-this5.check
-- Error: tests/neg-custom-args/captures/cc-this5.scala:16:20 ----------------------------------------------------------
16 |    def f = println(c)  // error
   |                    ^
   |                    reference (c : Cap) is not included in the allowed capture set {}
   |                    of the enclosing class A
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this5.scala:21:15 -------------------------------------
21 |    val x: A = this // error
   |               ^^^^
   |               Found:    (A.this : A^{c})
   |               Required: A
   |
   | longer explanation available when compiling with `-explain`
-- [E058] Type Mismatch Error: tests/neg-custom-args/captures/cc-this5.scala:7:9 ---------------------------------------
7 |  object D extends C:   // error
  |         ^
  |         illegal inheritance: self type D.type^{c} of object D does not conform to self type C^{}
  |         of parent class C
  |
  | longer explanation available when compiling with `-explain`
